apps/rocketchat/base/service-mongodb.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rocketchat-db
spec:
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  selector:
    app: rocketchat
    component: db
