apps/rocketchat/base/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: rocketchat
spec:
  port:
    targetPort: 3000
  to:
    kind: Service
    name: rocketchat
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
